--- a/body/9Conclusions_and_Implications.tex
+++ b/body/9Conclusions_and_Implications.tex
@@ -1,13 +1,53 @@
+% yeooio：Conclusions and Implications
+% 第一段：研究总览
+% 本研究构建并实现了一个统一的数据驱动建模框架，用以评估、比较、预测并优化国家层面的人工智能发展能力。框架基于一致的24项指标体系和统一的评价规则，覆盖要素识别（问题一）、综合评价（问题二）、时序预测（问题三）与资源优化（问题四）四个问题，形成闭环分析流程，确保结果在跨国与跨期维度上的可比性与可追溯性。
+
+% 第二段：主要发现（按问题归纳）
+% 问题一：分析表明，国家级AI发展并非由单一因素驱动，而是由基础设施、人才、政策环境与创新产出等要素紧密耦合而成的复杂系统。要素间普遍存在显著正相关（若干指标对的皮尔逊相关系数|r|>0.7），提示协同投入的必要性。
+
+% 问题二：2025年综合评价结果呈现明显分层：美国位列首位（TOPSIS得分0.641），中国位列第二（0.510），印度位列第三（0.210）。TOPSIS与灰色关联两套方法的排名高度一致，增强了排序结论的稳健性，表明分层更多由结构性长期优势驱动而非短期波动。
+
+% 问题三：对2026–2035年的情景预测显示，在结构稳定的前提下，全球AI竞争格局具有较强的惯性，头部国家（美、中、印）在中短期内保持优势，中游国家仅出现有限位次交换。回测诊断表明中位预测误差为10.35%（median MAPE = 0.1035），总体预测精度在可接受范围内。
+
+% 问题四：在假设自2026年起中国获得1万亿元（CNY）的额外预算情境下，优化结果建议优先保障基础设施支出（占比32.33%，约3233亿元），其次为人才培养与制度/政策支持（各占比17.39%）。该配置凸显了算力与基础能力的高边际回报，同时强调制度与人才的配套必要性。
+
+% 第三段：方法学贡献
+% 方法上，本研究融合了客观赋权（熵权法）、多模型交叉验证（TOPSIS与灰色关联）、时间序列预测（GM(1,1)并含回测诊断）与非线性约束优化（SLSQP）等技术手段，形成一套既可解释又可扩展的分析流程。稳健性检验与误差诊断支持了结论的可信度，使得观测到的排名模式更可能反映结构性特征而非方法性伪像。
+
+% 第四段：局限性
+% 本研究亦存在若干局限。首先，所用数据多为公开数据且存在时间滞后，可能无法实时反映最新技术突破或政策突变。其次，预测基于"结构大体稳定"的假设，未对颠覆性事件（如重大政策调整或突破性技术发明）进行专门情景建模。再次，投资响应模型采用了边际递减等简化假设，实际投入产出可能受复杂制度与市场反馈影响。针对以上局限，本文在若干分析中已加入灵敏度检验，且建议未来研究采用更高频的替代指标与冲击情景分析。
+
+% 第五段：政策启示（可操作要点）
+% 基于研究发现，我们向政策制定者提出如下建议：
+
+% 制定长期且系统性的AI发展战略，避免片段化的短期投入；
+% 将算力与基础设施置于优先投资序列（短中期投入占比应显著高于平均水平），以破除制约性瓶颈；
+% 实施人才培养、政策支持与研发投入的协同策略，确保资金、人才与制度互为支撑；
+% 后发国家应制定跨周期的赶超路径，包括规模化投入、制度创新与国际合作，以应对路径依赖带来的趋同性劣势。
+% 第六段：总结与展望
+% 总体而言，本研究提供了一套透明、可复现且可扩展的国家级AI能力评估与优化框架，为政策制定提供了量化且循证的参考。尽管存在数据与模型假设的限制，该框架仍能为理解国家AI能力建设的结构性驱动因素与长期演化路径提供有价值的洞见。未来工作可在提高数据频度、引入冲击场景与强化投资-产出动态建模方面进一步推进。
+
+
+
 \section{Conclusions and Implications}
 
-This study develops a unified, data-driven modeling framework to evaluate, compare, forecast, and optimize national artificial intelligence (AI) development capability. By maintaining a consistent indicator system and a fixed evaluation rule throughout all tasks, the proposed framework forms a closed analytical loop that ensures cross-country and cross-period comparability, as well as full traceability of results.
+This study constructs a unified, data-driven modeling framework for evaluating, comparing, forecasting, and optimizing national artificial intelligence (AI) development capability. Built upon a consistent system of 24 indicators and a unified evaluation protocol, the framework encompasses factor identification (Problem 1), comprehensive evaluation (Problem 2), temporal forecasting (Problem 3), and resource optimization (Problem 4), forming a closed-loop analytical pipeline that ensures cross-country and cross-period comparability as well as full result traceability.
 
-From a methodological perspective, the factor identification and structural analysis reveal that AI development is not driven by isolated indicators, but by a tightly coupled system involving infrastructure capacity, human capital, policy environment, and innovation output. The composite evaluation results for 2025 demonstrate clear stratification among countries, reflecting persistent structural advantages rather than short-term fluctuations. Extending the analysis to the 2026--2035 horizon, the forecasting task shows that, under stable structural conditions, global AI competitiveness rankings exhibit strong inertia, with only limited position changes among mid-tier countries. This finding suggests that AI leadership is path-dependent and difficult to overturn without sustained, long-term investment.
+\textbf{Problem 1} reveals that national AI development emerges from a tightly coupled system of infrastructure, human capital, policy environment, and innovation output rather than isolated factors. Multiple indicator pairs exhibit strong positive Pearson correlations (several with $|r| > 0.7$), highlighting the importance of coordinated investments across dimensions. \textbf{Problem 2} demonstrates clear stratification in 2025: the United States ranks first (TOPSIS $= 0.641$), China second ($0.510$), and India third ($0.210$). High consistency between TOPSIS and Grey Relational Analysis rankings reinforces robustness, suggesting that stratification reflects structural rather than transient drivers. \textbf{Problem 3} extends the analysis to 2026--2035: under structural-stability assumptions, the global AI competitiveness landscape exhibits strong inertia, with leading countries (U.S., China, India) maintaining advantages in the medium term and only limited rank exchanges among mid-tier countries. Backtest diagnostics report a median MAPE $= 0.1035$ (10.35\%), indicating acceptable forecast accuracy. \textbf{Problem 4}, under the scenario of an additional CNY 1 trillion for China from 2026, recommends prioritizing infrastructure investment (32.33\%, $\approx$ CNY 323.3 billion), followed by talent cultivation and policy support (each 17.39\%). This allocation pattern indicates high marginal returns to computational capacity and foundational capabilities and underscores the need for coordinated institutional and human-capital measures.
 
-Robustness and error diagnostics further support the reliability of the conclusions. High rank-order consistency ($\rho_s = 0.9758$) and a moderate median prediction error (median MAPE $\approx 0.1035$) indicate that the results are not sensitive to specific parameter settings or single-model assumptions. Consequently, the observed ranking patterns and trends can be regarded as structurally driven rather than model-induced artifacts.
+Methodologically, this study integrates entropy-based weighting (Entropy Weight Method, EWM), multi-model cross-validation (TOPSIS and Grey Relational Analysis, GRA), time-series forecasting (Grey model GM(1,1) with backtest diagnostics), and nonlinear constrained optimization (Sequential Least Squares Programming, SLSQP). Robustness checks and error diagnostics support the credibility of the findings, suggesting that observed ranking patterns likely reflect structural characteristics rather than methodological artifacts.
 
-On this basis, the investment optimization task translates analytical results into actionable policy insights. Under the assumption of an additional one-trillion-yuan budget for China starting in 2026, the optimal allocation strategy emphasizes an infrastructure-first approach, complemented by coordinated investment in talent cultivation and policy support. This allocation pattern reflects the high marginal contribution of foundational capacity to long-term AI competitiveness, while highlighting the necessity of institutional and human capital alignment.
+Several limitations merit acknowledgment. First, the analysis relies on publicly available data that may be lagged and thus not capture the most recent technological breakthroughs or abrupt policy changes. Second, forecasts assume structural stability and do not explicitly model disruptive events (e.g., major policy shifts or breakthrough technologies). Third, the investment-response formulation adopts simplifying assumptions (such as diminishing marginal returns); real-world input-output dynamics may be affected by complex institutional and market feedback. We have incorporated sensitivity analyses where feasible; future work should consider higher-frequency proxy indicators and explicit shock-scenario modeling.
 
-Several limitations should be acknowledged. First, the analysis relies on publicly available and lagged data, which may not fully capture emerging technological breakthroughs. Second, the forecasting results are conditional on a stable structural assumption and do not account for disruptive policy shifts or technological shocks. Despite these limitations, the proposed framework provides a transparent, extensible, and reproducible decision-support tool for evaluating national AI competitiveness and guiding strategic investment planning.
+Based on these findings, we offer the following recommendations to policymakers:
 
-Overall, this study offers both a quantitative assessment of the current global AI landscape and a forward-looking perspective on its evolution, with implications for policymakers seeking to design evidence-based and strategically coherent AI development strategies.
+\begin{enumerate}
+    \item Adopt long-term, systemic AI development strategies rather than fragmented short-term measures;
+    \item Prioritize computational capacity and infrastructure investment---allocating materially above-average shares in the short to medium term to remove binding bottlenecks;
+    \item Coordinate investments in talent, policy, and R\&D so financial, human, and institutional capacities reinforce one another;
+    \item For latecomer countries, design cross-cycle catch-up strategies combining large-scale investment, institutional innovation, and international cooperation to mitigate path-dependence disadvantages.
+\end{enumerate}
+
+Overall, this study provides a transparent, reproducible, and extensible framework for assessing and optimizing national AI capability, offering quantitative, evidence-based guidance for policy formulation. Despite data and model limitations, the framework delivers valuable insights into structural drivers and long-term evolution of national AI capacity. Future extensions should increase data frequency, incorporate shock scenarios, and strengthen dynamic investment-to-output modeling.
+
+Overall, this study provides a transparent, reproducible, and extensible framework for national AI capability assessment and optimization, offering quantitative and evidence-based reference for policy formulation. Despite limitations in data and model assumptions, the framework yields valuable insights into the structural drivers and long-term evolutionary pathways of national AI capacity building. Future work may advance the field by improving data frequency, introducing shock scenarios, and strengthening dynamic investment-output modeling.
