--- a/MI2601258.tex
+++ b/MI2601258.tex
@@ -93,7 +93,7 @@ Please replace this text with your own summary. This summary should briefly desc
 
 %关键词
 \vspace{0.4cm}
-\noindent \textbf{Keywords:} KFC \quad V50 \quad Chicken
+\noindent \textbf{Keywords:} AI Development Capability, Multi-Criteria Evaluation, TOPSIS, Grey Forecasting, Entropy Weighting, Investment Optimization, Competitiveness Ranking
 %%%%%%%%%%% End Summary %%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
