--- a/body/1Introduction.tex
+++ b/body/1Introduction.tex
@@ -30,4 +30,11 @@ By sequentially accomplishing these tasks, this study provides a coherent framew
 
 \subsection{Our Work}
 
-这是我们的工作介绍
+To systematically address these challenges, this study establishes a closed-loop framework of ``data--modeling--validation--decision.'' Figure~\ref{fig:overall_framework} illustrates the complete workflow from 24-indicator data processing through four progressive problems, multi-layer validation, to final policy recommendations.
+
+\begin{figure}[htbp]
+  \centering
+  \includegraphics[width=0.75\textwidth]{figure/our_work_flowchart.pdf}
+  \caption{Overall modeling framework for assessing, forecasting, and optimizing national AI competitiveness.}
+  \label{fig:overall_framework}
+\end{figure}
