--- a/body/5task1.tex
+++ b/body/5task1.tex
@@ -1,6 +1,7 @@
 % =========================
 % body/5task1.tex
 % =========================
+\FloatBarrier
 \section{Task 1: Analysis of AI Development Factors}
 
 Task~1 aims to \emph{reveal the internal structure} of national AI capability from the 24-indicator system.
@@ -99,19 +100,19 @@ hub indicators (often infrastructure and investment) connect multiple modules, c
 
 \begin{figure}[htbp]
   \centering
-  \begin{subfigure}[t]{0.49\textwidth}
+  \begin{subfigure}[t]{0.40\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\detokenize{figure/task1/fig3_en_Variance Explained Plot for Principal Components.pdf}}
     \caption{Variance explained by PCs.}
     \label{fig:task1_pca}
   \end{subfigure}\hfill
-  \begin{subfigure}[t]{0.49\textwidth}
+  \begin{subfigure}[t]{0.40\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\detokenize{figure/task1/fig4_en_Factor Importance Ranking Bar Chart.pdf}}
     \caption{Importance ranking $I_j$.}
     \label{fig:task1_importance}
   \end{subfigure}\\[2pt]
-  \begin{subfigure}[t]{0.95\textwidth}
+  \begin{subfigure}[t]{0.80\textwidth}
     \centering
     \includegraphics[width=\linewidth]{\detokenize{figure/task1/fig5_en_Strong-Correlation Network or Chord Diagram.pdf}}
     \caption{Strong-correlation interaction network.}
@@ -124,3 +125,5 @@ hub indicators (often infrastructure and investment) connect multiple modules, c
 \paragraph{Summary of Task~1.}
 Task~1 identifies a dense correlation backbone, coherent indicator modules, and a low-dimensional dominant structure.
 These findings motivate (i) objective aggregation in Task~2 and (ii) synergy-aware design in Task~4 using $\mathcal{E}$.
+
+\FloatBarrier
